--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <!--引入样式-->
+    <% for(var css of htmlWebpackPlugin.options.cdn.css) { %>
+      <link rel="stylesheet" href="<%=css%>">
+    <% } %>
+    <!--引入 JS-->
+    <% for(var js of htmlWebpackPlugin.options.cdn.js) { %>
+      <script src="<%=js%>"></script>
+    <% } %>
+    <!--
     <link rel="stylesheet" href="https://unpkg.com/element-ui@2.15.10/lib/theme-chalk/index.css">
     <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.core.css">
     <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css">
     <link rel="stylesheet" href="https://unpkg.com/quill@1.3.7/dist/quill.bubble.css">
+    -->
   </head>
   <body>
     <noscript>
@@ -18,7 +28,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <!-- built files will be auto injected -->
-    <script src="https://unpkg.com/echarts@5.4.0/dist/echarts.min.js"></script>
+<!--    <script src="https://unpkg.com/echarts@5.4.0/dist/echarts.min.js"></script>
     <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.5.1/dist/vue-router.js"></script>
     <script src="https://unpkg.com/vuex@3.6.2/dist/vuex.js"></script>
@@ -27,6 +37,6 @@
     <script src="https://unpkg.com/element-ui@2.15.10/lib/index.js"></script>
     <script src="https://unpkg.com/quill@1.3.7/dist/quill.js"></script>
     <script src="https://unpkg.com/vue-quill-editor@3.0.6/dist/vue-quill-editor.js"></script>
-    <script src="https://unpkg.com/vuex-persistedstate@3.2.1/dist/vuex-persistedstate.umd.js"></script>
+    <script src="https://unpkg.com/vuex-persistedstate@3.2.1/dist/vuex-persistedstate.umd.js"></script>-->
   </body>
 </html>
